Fix ProtocolSupport compat on 1.17 Fixes #2632
Thank you md_5, very cool